--- a/pages/menu/menu.html
+++ b/pages/menu/menu.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/menu.css">
+    <link rel="stylesheet" href="../styles/reset.css">
     <title>Document</title>
 </head>
 
@@ -19,7 +19,7 @@
                     </a>
                 </li>
                 <li>
-                    <a id="btn-link" href="../montagem/index.html">
+                    <a id="btn-link" href="pages/montagem/index.html">
                         Montar
                     </a>
                 </li>
@@ -43,9 +43,6 @@
                         Placa Mãe
                     </a>
                 </li>
-
-
-
             </ul>
         </nav>
     </header>
