--- a/pages/montagem/index.html
+++ b/pages/montagem/index.html
@@ -6,26 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Processadores</title>
-    <link rel="stylesheet" type="text/css" href="../styles/montagem.css">
+    <link rel="stylesheet" type="text/css" href="../../styles/montagem.css">
+    <script src="script.js" defer></script>
+    <script src="../../scripts/menu.js" defer></script>
 </head>
 
 <body>
     <main class="table" id="customers_table">
-        <div id="menu"></div>
-        <script>
-            // Use JavaScript para carregar o menu na página
-            fetch('../menu/menu.html')
-              .then(response => response.text())
-              .then(html => {
-                document.getElementById('menu').innerHTML = html;
-              });
-          </script>
+        <header id="header"></header>
         <section class="table__header">
-            <h1>Escolha suas peças <img src="images/552016-engrenages-vector-icon-gratuit-vectoriel-removebg-preview (1).png" alt=""></h1>
-            
+            <h1>Escolha suas peças <img
+                    src="images/552016-engrenages-vector-icon-gratuit-vectoriel-removebg-preview (1).png" alt=""></h1>
+
         </section>
         <section class="table__body">
-            
+
             <table>
                 <thead>
                     <tr>
@@ -38,7 +33,9 @@
                 <tbody>
                     <tr>
                         <td> Processador </td>
-                        <td><a href="../processadores/index.html"><p class="status">Escolher</p></a></td>
+                        <td><a href="../processadores/index.html">
+                                <p class="status">Escolher</p>
+                            </a></td>
                         <td></td>
                         <td></td>
                         <td>
@@ -49,7 +46,9 @@
                     </tr>
                     <tr>
                         <td> Placa Mãe </td>
-                        <td><a href="../placa-mãe/index.html"><p class="status">Escolher</p></a></td>
+                        <td><a href="../placa-mãe/index.html">
+                                <p class="status">Escolher</p>
+                            </a></td>
 
                         <td></td>
                         <td></td>
@@ -59,7 +58,9 @@
                     </tr>
                     <tr>
                         <td> Cooler</td>
-                        <td><p class="status">Adicionar</p> </td>
+                        <td>
+                            <p class="status">Adicionar</p>
+                        </td>
                         <td></td>
                         <td></td>
                         <td><strong></strong></td>
@@ -68,7 +69,9 @@
                     </tr>
                     <tr>
                         <td> Memória</td>
-                        <td><p class="status">Adicionar</p> </td>
+                        <td>
+                            <p class="status">Adicionar</p>
+                        </td>
                         <td></td>
                         <td></td>
                         <td><strong></strong></td>
@@ -77,7 +80,9 @@
                     </tr>
                     <tr>
                         <td> Placa de Vídeo</td>
-                        <td><p class="status">Adicionar</p> </td>
+                        <td>
+                            <p class="status">Adicionar</p>
+                        </td>
                         <td></td>
                         <td></td>
                         <td><strong></strong></td>
@@ -86,7 +91,9 @@
                     </tr>
                     <tr>
                         <td> Armazenamento</td>
-                        <td><p class="status">Adicionar</p> </td>
+                        <td>
+                            <p class="status">Adicionar</p>
+                        </td>
                         <td></td>
                         <td></td>
                         <td><strong></strong></td>
@@ -95,7 +102,9 @@
                     </tr>
                     <tr>
                         <td> Memória</td>
-                        <td><p class="status">Adicionar</p> </td>
+                        <td>
+                            <p class="status">Adicionar</p>
+                        </td>
                         <td></td>
                         <td></td>
                         <td><strong></strong></td>
@@ -104,7 +113,9 @@
                     </tr>
                     <tr>
                         <td> Fonte</td>
-                        <td><p class="status">Adicionar</p> </td>
+                        <td>
+                            <p class="status">Adicionar</p>
+                        </td>
                         <td></td>
                         <td></td>
                         <td><strong></strong></td>
@@ -113,7 +124,9 @@
                     </tr>
                     <tr>
                         <td> Gabinete</td>
-                        <td><p class="status">Adicionar</p></td>
+                        <td>
+                            <p class="status">Adicionar</p>
+                        </td>
                         <td></td>
                         <td></td>
                         <td><strong></strong></td>
@@ -126,7 +139,6 @@
             </table>
         </section>
     </main>
-    <script src="script.js"></script>
 
 </body>
 
