--- a/pages/menu/menu.html
+++ b/pages/menu/menu.html
@@ -14,32 +14,32 @@
         <nav>
             <ul>
                 <li>
-                    <a id="btn-link" href="../index.html">
+                    <a class="btn-link" href="../index.html">
                         <img src="../public/assets/9ddaf962-f789-49ef-8148-f5e48abad94d.png" id="logo" alt="">
                     </a>
                 </li>
                 <li>
-                    <a id="btn-link" href="pages/montagem/index.html">
+                    <a class="btn-link" href="pages/montagem/index.html">
                         Montar
                     </a>
                 </li>
                 <li>
-                    <a id="btn-link" href="../assistente/index.html">
+                    <a class="btn-link" href="/pages/assistente/index.html">
                         Assistente
                     </a>
                 </li>
                 <li>
-                    <a id="btn-link" href="../Periféricos/index.html">
+                    <a class="btn-link" href="../periféricos/index.html">
                         Periféricos
                     </a>
                 </li>
                 <li>
-                    <a id="btn-link" href="../processadores/index.html">
+                    <a class="btn-link" href="../processadores/index.html">
                         Processadores
                     </a>
                 </li>
                 <li>
-                    <a id="btn-link" href="../placa-mãe/index.html">
+                    <a class="btn-link" href="../placa-mãe/index.html">
                         Placa Mãe
                     </a>
                 </li>
