--- a/pages/placa-mãe/index.html
+++ b/pages/placa-mãe/index.html
@@ -6,20 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Placa mãe</title>
-    <link rel="stylesheet" type="text/css" href="../styles/placa-mae.css">
+    <link rel="stylesheet" type="text/css" href="../../styles/placa-mae.css">
+    <script src="../../scripts/menu.js" defer></script>
 </head>
 
 <body>
     <main class="table" id="customers_table">
-        <div id="menu"></div>
-        <script>
-            // Use JavaScript para carregar o menu na página
-            fetch('../menu/menu.html')
-                .then(response => response.text())
-                .then(html => {
-                    document.getElementById('menu').innerHTML = html;
-                });
-        </script>
+        <header id="header"></header>
         <section class="table__header">
             <h1>Placa Mãe</h1>
             <div class="input-group">
